WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
46882
The case-insensitivity backreference checking isn't working with YARR Interpreter
https://bugs.webkit.org/show_bug.cgi?id=46882
Summary
The case-insensitivity backreference checking isn't working with YARR Interpr...
Peter Varga
Reported
2010-09-30 02:07:20 PDT
The Interpreter::tryConsumeBackReference() function doesn't support the ignorecase checking of characters. Eg.: "Abab".match(/(ab)\1/i); result: null expected: Abab, Ab
Attachments
proposed patch
(2.39 KB, patch)
2010-09-30 02:14 PDT
,
Peter Varga
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Peter Varga
Comment 1
2010-09-30 02:14:23 PDT
Created
attachment 69319
[details]
proposed patch
Gavin Barraclough
Comment 2
2010-09-30 04:32:12 PDT
Comment on
attachment 69319
[details]
proposed patch Looks great, thank you!
WebKit Commit Bot
Comment 3
2010-09-30 04:45:01 PDT
Comment on
attachment 69319
[details]
proposed patch Clearing flags on attachment: 69319 Committed
r68771
: <
http://trac.webkit.org/changeset/68771
>
WebKit Commit Bot
Comment 4
2010-09-30 04:45:07 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug