2010-09-30  Peter Varga  <pvarga@inf.u-szeged.hu>

Reviewed by Gavin Barraclough.

        The case-insensitivity backreference checking isn't working with YARR
        Interpreter
        https://bugs.webkit.org/show_bug.cgi?id=46882

        Add ignorecase checking to the Interpreter::tryConsumeBackReference() function.

        * yarr/RegexInterpreter.cpp:
        (JSC::Yarr::Interpreter::tryConsumeBackReference):

Canonical link: https://commits.webkit.org/59403@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@68771 268f45cc-cd09-0410-ab3c-d52691b4dbfc